--- a/bootexample.properties
+++ b/bootexample.properties
@@ -1,3 +1,7 @@
 spring.jpa.hibernate.ddl-auto=create-drop
 management.security.enabled=false
-server.port=8081
+server.port=8080
+
+security.ignored=/**
+spring.security.enabled=false
+security.basic.enabled=false
