--- a/bootexample.properties
+++ b/bootexample.properties
@@ -6,4 +6,4 @@ security.ignored=/**
 spring.security.enabled=false
 security.basic.enabled=false
 
-hello.string=Hallo updated
+hello.string=Hallo updated 2
